--- a/node/package.json
+++ b/node/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "axios": "0.18.0"
+  },
+  "dependencies": {
+    "node-schedule": "1.3.0"
   }
 }
